# bgzip-rs

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  LICENSE  README.md  appveyor.yml  settings.json
.github/workflows/: build.yml
bgzip/: Cargo.toml
bgzip-cli/: Cargo.toml
bgzip-cli/src/: main.rs
bgzip-rs/: Cargo.toml
bgzip-rs/src/: main.rs
bgzip/examples/: bgzip-header-printer.rs  compress.rs  decompress.rs  tabix-printer.rs
bgzip/src/: deflate.rs  error.rs  header.rs  index.rs  lib.rs  rayon.rs  tabix.rs
bgzip/src/read/: mod.rs  thread.rs
bgzip/src/write/: mod.rs  thread.rs
bgzip/testfiles/: common_all_20180418_half.vcf.gz.gzi  common_all_20180418_half.vcf.gz.tbi  generated.bed.gz.gzi  testfile-generate.py
examples/: bgzip-header-printer.rs  bgzip.rs  compress.rs  decompress.rs  tabix-region.rs  tbiview.rs  thread-bgzip.rs
src/: csi.rs  error.rs  header.rs  lib.rs  read.rs  reader.rs  tabix.rs  thread.rs  write.rs  writer.rs
src/index/: mod.rs  tbi.rs
src/read/: mod.rs  thread.rs
src/write/: mod.rs  thread.rs
testfiles/: common_all_20180418_half.vcf.gz.csi  edge.bed.gz.tbi  edge.gff3.gz.tbi  edge_case_generator.py  gencode.v28.annotation.sorted.subset.chr17-42990000-42990600.gff3  gencode.v28.annotation.sorted.subset.gff3.gz.csi  gencode.v28.annotation.sorted.subset.gff3.gz.gzi  gencode.v28.annotation.sorted.subset.gff3.gz.tbi  gencode.v28.annotation.sorted.subset.gff3.gz.tbi.uncompressed  generated.bed.gz.tbi  reg2bin.c
testfiles/index-c/: .gitignore  Makefile  bincalc.c  bintest.c  bintest_tbi.c
tmp/: .gitignore
