[package]
name = "bgzip"
version = "0.2.0"
edition = "2018"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
readme = "README.md"
description = "Rust implementation of bgzip"
homepage = "https://github.com/informationsea/bgzip-rs"
repository = "https://github.com/informationsea/bgzip-rs"
license = "MIT"
keywords = ["bioinformatics", "bgzip", "gzip", "compression"]
categories = ["compression"]
exclude = ["testfiles", "tmp"]

[badges]
travis-ci = { repository = "informationsea/bgzip-rs", branch = "master" }
appveyor = { repository = "informationsea/bgzip-rs", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]
flate2 = "1"
thiserror = "1.0"

[dev-dependencies]
csv = "1"
clap = "2"
tempfile = "3"