[package]
name = "bgzip"
version = "0.3.1"
edition = "2018"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
readme = "../README.md"
description = "Rust implementation of bgzip"
homepage = "https://github.com/informationsea/bgzip-rs"
repository = "https://github.com/informationsea/bgzip-rs"
license = "MIT"
keywords = ["bioinformatics", "bgzip", "gzip", "compression"]
categories = ["compression"]
exclude = ["testfiles", "tmp"]

[features]
default = ["rust_backend", "log", "rayon"]
flate2 = ["dep:flate2"]
rust_backend = ["flate2/rust_backend", "flate2"]
zlib = ["flate2/zlib", "flate2"]
zlib-ng-compat = ["flate2/zlib-ng-compat", "flate2"]
zlib-ng = ["flate2/zlib-ng", "flate2"]
cloudflare_zlib = ["flate2/cloudflare_zlib", "flate2"]
libdeflater = ["dep:libdeflater"]
rayon = ["dep:rayon"]
log  = ["dep:log"]

[dependencies]
flate2 = { version = "1", default-features = false, optional = true }
rayon = { version = "1.6.1", optional = true }
log = { version = "0.4", optional = true }
libdeflater = { version = "0.12.0", optional = true }
thiserror = "1.0"

[dev-dependencies]
flate2 = "1"
csv = "1"
clap = {version = "4.0", features=["derive", "wrap_help"]}
tempfile = "3.3"
anyhow = "1"
rand = "0.8.5"
rand_pcg = "0.3.1"
